--- a/Voronoi/Voronoi.csproj
+++ b/Voronoi/Voronoi.csproj
@@ -60,6 +60,7 @@
     <Compile Include="HalfEdge.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Vertex.cs" />
+    <Compile Include="Voronois.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
